version/0.19/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.StringList.rst.txt
ansys.fluent.core.solver.flobject.StringList
============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: StringList

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~StringList.__init__
      ~StringList.default_value
      ~StringList.get_attr
      ~StringList.get_attrs
      ~StringList.get_state
      ~StringList.is_active
      ~StringList.is_read_only
      ~StringList.print_state
      ~StringList.set_flproxy
      ~StringList.set_state
      ~StringList.to_python_keys
      ~StringList.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~StringList.flproxy
      ~StringList.fluent_name
      ~StringList.obj_name
      ~StringList.parent
      ~StringList.path
      ~StringList.python_name
      ~StringList.python_path
   
   